--- a/landscape.html
+++ b/landscape.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page Article</title>
+    <title>NASH Landscape</title>
     <!-- BS CSS Stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -61,6 +61,12 @@
                     <td>1.29B</td>
                 </tr>
                 <tr>
+                    <td>Lanifibranor</td>
+                    <td>AbbVie</td>
+                    <td class="text-primary">Partnership</td>
+                    <td>259.3B</td>
+                </tr>
+                <tr>
                     <td>Efruxiferimin</td>
                     <td>Akero </td>
                     <td>FGF21</td>
@@ -73,6 +79,18 @@
                     <td>133.3M</td>
                 </tr>
                 <tr>
+                    <td>Efruxifermin</td>
+                    <td>Amgen</td>
+                    <td class="text-primary">Licensed Out</td>
+                    <td>137.1B</td>
+                </tr>
+                <tr class="table-danger">
+                    <td>Elafibranor</td>
+                    <td>Genfit</td>
+                    <td class="text-danger">Dropped</td>
+                    <td>177.6M</td>
+                </tr>
+                <tr>
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
                     <td>Cyclophilin</td>
@@ -81,7 +99,7 @@
                 <tr class="table-danger">
                     <td class="cancel">Obeticholic</td>
                     <td>Intercept</td>
-                    <td>FXR</td>
+                    <td class="text-danger">Dropped</td>
                     <td>452.5M</td>
                 </tr>
                 <tr>
@@ -89,6 +107,12 @@
                     <td>Inventiva</td>
                     <td>PPAR</td>
                     <td>146.4M</td>
+                </tr>
+                <tr class="table-danger">
+                    <td>ARO-PNPLA3</td>
+                    <td>J&J</td>
+                    <td class="text-danger">Dropped</td>
+                    <td>389.3B</td>
                 </tr>
                 <tr>
                     <td>Resmetirom</td>
@@ -120,27 +144,19 @@
                     <td>FGF21</td>
                     <td>1.38B</td>
                 </tr>
+
+
                 <!-- CODE DIVISON -->
+
+
                 <tr class="table-dark text-center">
                     <td colspan="4" class="">Other Potential NAFLD/NASH</td>
-                </tr>
-                <tr>
-                    <td>Lanifibranor</td>
-                    <td>AbbVie</td>
-                    <td class="text-primary">Partnership</td>
-                    <td>259.3B</td>
                 </tr>
                 <tr>
                     <td>ALG-055009</td>
                     <td>Aligos</td>
                     <td>THR-β</td>
                     <td>37.2M</td>
-                </tr>
-                <tr>
-                    <td>Efruxifermin</td>
-                    <td>Amgen</td>
-                    <td class="text-primary">Licensed Out</td>
-                    <td>137.1B</td>
                 </tr>
                 <tr>
                     <td>ARO-PNPLA3</td>
@@ -221,12 +237,6 @@
                     <td>Private</td>
                 </tr>
                 <tr>
-                    <td>Elafibranor</td>
-                    <td>Genfit</td>
-                    <td>PPAR</td>
-                    <td>177.6M</td>
-                </tr>
-                <tr>
                     <td>Cilofexor</td>
                     <td>Gilead</td>
                     <td>FXR</td>
@@ -255,12 +265,6 @@
                     <td>Histogen</td>
                     <td>Pancaspase</td>
                     <td>2.89M</td>
-                </tr>
-                <tr>
-                    <td>ARO-PNPLA3</td>
-                    <td>J&J</td>
-                    <td class="text-danger">Dropped</td>
-                    <td>389.3B</td>
                 </tr>
                 <tr>
                     <td>LPCN-1144</td>
