Update table data

--- a/result.html
+++ b/result.html
@@ -51,7 +51,7 @@
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">ETNB-ENLIVEN</th>
+                    <th scope="col"></th>
                     <th scope="col">Placebo (n=61)</th>
                     <th scope="col">15mg QW (n=14)</th>
                     <th scope="col">30mg QW QD (n=66)</th>
@@ -200,7 +200,7 @@
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">ALT-PHASE 1B</th>
+                    <th scope="col"></th>
                     <th scope="col">Placebo (n=18)</th>
                     <th scope="col">1.2mg (n=14)</th>
                     <th scope="col">1.8mg (n=13)</th>
@@ -275,6 +275,43 @@
         </table>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
+
+        <!-- CODE DIVISON -->
+        <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+            <div class="h4 text-center p-2 m-0">Eli Lilly</div>
+            <div class="text-center p-2 m-0 bg">LLY-SURMOUNT-2 - Apr 27, 2023</div>
+            <table class="table table-striped table-success">
+                <thead>
+                    <tr class="table-dark">
+                        <th scope="col"></th>
+                        <th scope="col">Placebo (n=312)</th>
+                        <th scope="col">10mg (n=312)</th>
+                        <th scope="col">15mg (n=312)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Average Weight Reduction</td>
+                        <td>-3.2%</td>
+                        <td>-12.8%</td>
+                        <td>-14.7%</td>
+                    </tr>
+                    <tr>
+                        <td>% Achieving Weight Reduction >= 5%</td>
+                        <td>32.5%</td>
+                        <td>79.2%</td>
+                        <td>82.7%</td>
+                    </tr>
+                    <tr>
+                        <td>% Achieving Weight Reduction >= 15%</td>
+                        <td>2.7%</td>
+                        <td>39.7%</td>
+                        <td>48%</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="divider my-5 bg-warning-subtle"></div>
 
     <!-- CODE DIVISON -->
     <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
@@ -392,13 +429,45 @@
     <div class="divider my-5 bg-warning-subtle"></div>
 
     <!-- CODE DIVISON -->
+
+    <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+        <div class="h4 text-center p-2 m-0">HighTide</div>
+        <div class="text-center p-2 m-0 bg">HighTide-P2A - Jun 24, 2023</div>
+        <table class="table table-striped table-success">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col"></th>
+                    <th scope="col">Placebo</th>
+                    <th scope="col">500mg BID</th>
+                    <th scope="col">1000mg BID</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr></tr>
+                    <td>Reduction in cT1</td>
+                    <td>-14.7ms</td>
+                    <td></td>
+                    <td>-60.9ms</td>
+                </tr>
+                <tr></tr>
+                <td>% Achieving reduction in cT1 >= 80ms</td>
+                <td>16%</td>
+                <td></td>
+                <td>39%</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider my-5 bg-warning-subtle"></div>
+
+<!-- CODE DIVISON -->
     <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
         <div class="h4 text-center p-2 m-0">Intercept Pharmaceuticals</div>
         <div class="text-center p-2 m-0 bg">NASH Program Terminated</div>
         <table class="table table-striped table-danger">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">ICPT-REGENERATE</th>
+                    <th scope="col"></th>
                     <th scope="col">Placebo (n=311)</th>
                     <th scope="col">10mg (n=312)</th>
                     <th scope="col">25mg (n=308)</th>
@@ -428,7 +497,7 @@
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">IVA-NATIVE</th>
+                    <th scope="col"></th>
                     <th scope="col">Placebo (n=81)</th>
                     <th scope="col">800mg (n=83)</th>
                     <th scope="col">1200mg (n=83)</th>
@@ -532,7 +601,7 @@
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">MDGL-MAESTRO-NASH</th>
+                    <th scope="col"></th>
                     <th scope="col">Placebo (n=318)</th>
                     <th scope="col">80mg (n=316)</th>
                     <th scope="col">100mg (n=321)</th>
@@ -565,6 +634,7 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
+
     <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
         <div class="h4 text-center p-2 m-0">NGM Bio</div>
         <div class="text-center p-2 m-0 bg">NGM-ALPINE - May 24, 2021 </div>
@@ -624,13 +694,14 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
+
     <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
         <div class="h4 text-center p-2 m-0">Novo Nordisk</div>
         <div class="text-center p-2 m-0 bg">NVO-P2 - Jun 29, 2022</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">NVO-PHASE 2</th>
+                    <th scope="col"></th>
                     <th scope="col">Placebo (n=24)</th>
                     <th scope="col">2.4mg (n=47)</th>
                 </tr>
@@ -650,6 +721,7 @@
         </table>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
+
     <!-- CODE DIVISON -->
     <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
         <div class="h4 text-center p-2 m-0">Terns Pharmaceuticals</div>
@@ -657,7 +729,7 @@
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">TERN-DUET</th>
+                    <th scope="col"></th>
                     <th scope="col">Placebo (n=21)</th>
                     <th scope="col">1mg (n=23)</th>
                     <th scope="col">3mg (n=19)</th>
@@ -695,6 +767,7 @@
         </table>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
+
     <!-- CODE DIVISON -->
     <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
         <div class="h4 text-center p-2 m-0">Viking Therapeutics</div>
@@ -702,7 +775,7 @@
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">VKTX-VOYAGE</th>
+                    <th scope="col"></th>
                     <th scope="col">1mg QD (n=17)</th>
                     <th scope="col">2.5mg QD (n=58)</th>
                     <th scope="col">5mg QOD (n=36)</th>
@@ -735,6 +808,7 @@
         </table>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
+
     <!-- CODE DIVISON -->
     <footer class="py-3 mt-5 mb-3">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
