Content updated-content completion

--- a/landscape.html
+++ b/landscape.html
@@ -103,6 +103,12 @@
                     <td>28.6M</td>
                 </tr>
                 <tr class="table-danger">
+                    <td>Emricasan</td>
+                    <td>Histogen</td>
+                    <td class="text-danger">Dropped</td>
+                    <td>2.89M</td>
+                </tr>
+                <tr class="table-danger">
                     <td class="cancel">Obeticholic</td>
                     <td>Intercept</td>
                     <td class="text-danger">Dropped</td>
@@ -137,6 +143,12 @@
                     <td>Novo Nordisk</td>
                     <td>GLP-1R</td>
                     <td>318.7B</td>
+                </tr>
+                <tr>
+                    <td>TVB-2640</td>
+                    <td>Sagimet</td>
+                    <td>FASN</td>
+                    <td>257.9M</td>
                 </tr>
                 <tr>
                     <td>TERN-501</td>
@@ -261,12 +273,6 @@
                     <td>145.6M</td>
                 </tr>
                 <tr>
-                    <td>Emricasan</td>
-                    <td>Histogen</td>
-                    <td>Pancaspase</td>
-                    <td>2.89M</td>
-                </tr>
-                <tr>
                     <td>LPCN-1144</td>
                     <td>Lipocine</td>
                     <td>TU</td>
@@ -291,22 +297,10 @@
                     <td>17.1M</td>
                 </tr>
                 <tr>
-                    <td>Secukinumab</td>
-                    <td>Novartis</td>
-                    <td>Antibody</td>
-                    <td>229.9B</td>
-                </tr>
-                <tr>
                     <td>Ervogastat</td>
                     <td>Pfizer</td>
                     <td>DGAT2</td>
                     <td>199.7B</td>
-                </tr>
-                <tr>
-                    <td>TVB-2640</td>
-                    <td>Sagimet</td>
-                    <td>FASN</td>
-                    <td>257.9M</td>
                 </tr>
             </tbody>
         </table>
