--- a/result.html
+++ b/result.html
@@ -464,7 +464,7 @@
     <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
         <div class="h4 text-center p-2 m-0">Intercept Pharmaceuticals</div>
         <div class="text-center p-2 m-0 bg">NASH Program Terminated</div>
-        <table class="table table-striped table-danger">
+        <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
                     <th scope="col"></th>
@@ -721,8 +721,56 @@
         </table>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
-
     <!-- CODE DIVISON -->
+
+    <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+        <div class="h4 text-center p-2 m-0">Sagimet Biosciences</div>
+        <div class="text-center p-2 m-0 bg">SGMT-FASCINATE-2-Interim - Jun 23, 2023</div>
+        <table class="table table-striped table-success">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col"></th>
+                    <th scope="col">Placebo (n=22)</th>
+                    <th scope="col">50mg (n=30)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Liver Fat - Relative Reduction</td>
+                    <td>-1.5%</td>
+                    <td>-34.1%</td>
+                </tr>
+                <tr>
+                    <td>% Achieving >= 30% Liver Fat Reduction</td>
+                    <td>18%</td>
+                    <td>67%</td>
+                </tr>
+                <tr>
+                    <td>ALT Reduction (U/L)</td>
+                    <td>-4</td>
+                    <td>-16.5</td>
+                </tr>
+                <tr>
+                    <td>ProC3 Reduction</td>
+                    <td>-1.5%</td>
+                    <td>-8.2%</td>
+                </tr>
+                <tr>
+                    <td>ELF Score</td>
+                    <td>-0.01</td>
+                    <td>-0.41</td>
+                </tr>
+                <tr>
+                    <td>LDL Cholesterol (mg/dL)</td>
+                    <td>0</td>
+                    <td>-12.4</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider my-5 bg-warning-subtle"></div>
+    <!-- CODE DIVISON -->
+
     <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
         <div class="h4 text-center p-2 m-0">Terns Pharmaceuticals</div>
         <div class="text-center p-2 m-0 bg">TERN-DUET - Aug 8, 2023</div>
