--- a/result.html
+++ b/result.html
@@ -108,6 +108,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
 
@@ -190,6 +191,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
 
@@ -273,45 +275,47 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
 
-        <!-- CODE DIVISON -->
-        <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
-            <div class="h4 text-center p-2 m-0">Eli Lilly</div>
-            <div class="text-center p-2 m-0 bg">LLY-SURMOUNT-2 - Apr 27, 2023</div>
-            <table class="table table-striped table-success">
-                <thead>
-                    <tr class="table-dark">
-                        <th scope="col"></th>
-                        <th scope="col">Placebo (n=312)</th>
-                        <th scope="col">10mg (n=312)</th>
-                        <th scope="col">15mg (n=312)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Average Weight Reduction</td>
-                        <td>-3.2%</td>
-                        <td>-12.8%</td>
-                        <td>-14.7%</td>
-                    </tr>
-                    <tr>
-                        <td>% Achieving Weight Reduction >= 5%</td>
-                        <td>32.5%</td>
-                        <td>79.2%</td>
-                        <td>82.7%</td>
-                    </tr>
-                    <tr>
-                        <td>% Achieving Weight Reduction >= 15%</td>
-                        <td>2.7%</td>
-                        <td>39.7%</td>
-                        <td>48%</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="divider my-5 bg-warning-subtle"></div>
+    <!-- CODE DIVISON -->
+    <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+        <div class="h4 text-center p-2 m-0">Eli Lilly</div>
+        <div class="text-center p-2 m-0 bg">LLY-SURMOUNT-2 - Apr 27, 2023</div>
+        <table class="table table-striped table-success">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col"></th>
+                    <th scope="col">Placebo (n=312)</th>
+                    <th scope="col">10mg (n=312)</th>
+                    <th scope="col">15mg (n=312)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Average Weight Reduction</td>
+                    <td>-3.2%</td>
+                    <td>-12.8%</td>
+                    <td>-14.7%</td>
+                </tr>
+                <tr>
+                    <td>% Achieving Weight Reduction >= 5%</td>
+                    <td>32.5%</td>
+                    <td>79.2%</td>
+                    <td>82.7%</td>
+                </tr>
+                <tr>
+                    <td>% Achieving Weight Reduction >= 15%</td>
+                    <td>2.7%</td>
+                    <td>39.7%</td>
+                    <td>48%</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="p-2"></div>
+    </div>
+    <div class="divider my-5 bg-warning-subtle"></div>
 
     <!-- CODE DIVISON -->
     <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
@@ -425,6 +429,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
 
@@ -443,24 +448,25 @@
                 </tr>
             </thead>
             <tbody>
-                <tr></tr>
+                <tr>
                     <td>Reduction in cT1</td>
                     <td>-14.7ms</td>
                     <td></td>
                     <td>-60.9ms</td>
                 </tr>
-                <tr></tr>
-                <td>% Achieving reduction in cT1 >= 80ms</td>
-                <td>16%</td>
-                <td></td>
-                <td>39%</td>
-            </tr>
+                <tr>
+                    <td>% Achieving reduction in cT1 >= 80ms</td>
+                    <td>16%</td>
+                    <td></td>
+                    <td>39%</td>
+                </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
 
-<!-- CODE DIVISON -->
+    <!-- CODE DIVISON -->
     <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
         <div class="h4 text-center p-2 m-0">Intercept Pharmaceuticals</div>
         <div class="text-center p-2 m-0 bg">NASH Program Terminated</div>
@@ -488,6 +494,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
@@ -592,6 +599,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
@@ -631,6 +639,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
@@ -691,6 +700,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
@@ -719,6 +729,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
@@ -767,6 +778,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
@@ -813,6 +825,7 @@
                 </tr>
             </thead>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
 
@@ -854,6 +867,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="p-2"></div>
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
 
