Set collection content input completion

--- a/article.html
+++ b/article.html
@@ -55,7 +55,7 @@
                     <div class="card border-primary d-flex align-items-center article-card shadow">
                         <img src="images/lilly.jpeg" class="img-fluid">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
-                            <p class="card-text">Lilly Completes Acquisition of Sigilon Therapeutics.</p>
+                            <p class="card-text">Lilly Completes Acquisition of Sigilon Therapeutics. Researching and developing encapsulated cell therapies, including SIG-002, for the treatment of type 1 diabetes.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <a href="https://investor.lilly.com/news-releases/news-release-details/lilly-completes-acquisition-sigilon-therapeutics" class="btn btn-primary w-25" target="_blank">Read</a>
                                 <small class="text-body-secondary">August 14, 2023</small>
@@ -68,7 +68,7 @@
                     <div class="card border-primary d-flex align-items-center article-card shadow">
                         <img src="images/lilly.jpeg" class="img-fluid">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
-                            <p class="card-text">Lilly Completes Acquisition of Versanis Bio.</p>
+                            <p class="card-text">Lilly Completes Acquisition of Versanis Bio. The acquisition expands Lilly's portfolio to include Versanis' lead asset, Bimagrumab.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <a href="https://investor.lilly.com/news-releases/news-release-details/lilly-completes-acquisition-versanis-bio" class="btn btn-primary w-25" target="_blank">Read</a>
                                 <small class="text-body-secondary">August 14, 2023</small>
@@ -85,6 +85,19 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <a href="https://www.novonordisk.com/content/nncorp/global/en/news-and-media/news-and-ir-materials/news-details.html?id=166304" class="btn btn-primary w-25" target="_blank">Read</a>
                                 <small class="text-body-secondary">August 10, 2023</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/terns.png" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Terns Achieves Primary Endpoint And All Secondary Endpoints in P2A Duet Trial of THR-B Agonist TERN-501 In NASH.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.ternspharma.com/news-releases/news-release-details/terns-achieves-primary-endpoint-and-all-secondary-endpoints" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">August 8, 2023</small>
                             </div>
                         </div>
                     </div>
@@ -428,6 +441,32 @@
 
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/terns.png" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Terns Pharmaceuticals Highlights Results From P1 Clinical Trial of TERN-501 At AASLD THe Liver Meeting® 2022.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.ternspharma.com/news-releases/news-release-details/terns-pharmaceuticals-highlights-results-phase-1-clinical-trial" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">November 4, 2022</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/sagimet.jpeg" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Sagimet Biosciences Announces Positive Interim Phase 2b Clinical Trial Data with Denifanstat, a First-in-Class Fatty Acid Synthase Inhibitor, in Moderate-to-Severe NASH Patients.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.sagimet.com/news-releases/news-release-details/sagimet-biosciences-announces-positive-interim-phase-2b-clinical" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">November 3, 2022</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
                         <img src="images/lilly.jpeg" class="img-fluid">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <p class="card-text">Lilly receives U.S. FDA Fast Track designation for tirzepatide for the treatment of adults with obesity, or overweight with weight-related comorbidities.</p>
@@ -746,6 +785,32 @@
                     </div>
                 </div>
 
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/sagimet.jpeg" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">New Data from Sagimet's Phase 2 FASCINATE-1 Clinical Trial Demonstrate TVB-2640's Positive Effect Across Patients with NASH in the U.S. and China.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.sagimet.com/news-releases/news-release-details/new-data-sagimets-phase-2-fascinate-1-clinical-trial-demonstrate" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">November 12, 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/terns.png" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Terns Reports Positive Top-Line Results From P1 Proof Of Concept Clinical Trial Of THR-B Agonist TERN-501.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.ternspharma.com/news-releases/news-release-details/terns-reports-positive-top-line-results-phase-1-proof-concept" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">November 9, 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-lg-4 col-md-6 col-12 ">
                     <div class="card border-primary d-flex align-items-center article-card shadow">
                         <img src="images/akero.png" class="img-fluid">
@@ -859,6 +924,19 @@
 
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/sagimet.jpeg" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Published Results from Sagimet's FASCINATE-1 Phase 2a Trial Demonstrate FASN Inhibitor TVB-2640's Ability to Significantly Reduce Excess Liver Fat.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.sagimet.com/news-releases/news-release-details/published-results-sagimets-fascinate-1-phase-2a-trial" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">July 26, 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
                         <img src="images/hepion.png" class="img-fluid">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <p class="card-text">Hepion Pharmaceuticals Announces Positive Topline Data from Phase 2A
@@ -893,6 +971,19 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <a href="https://ir.altimmune.com/news-releases/news-release-details/altimmune-announces-positive-interim-data-alt-801-phase-1-trial" class="btn btn-primary w-25" target="_blank">Read</a>
                                 <small class="text-body-secondary">June 16, 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/terns.png" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Terns Reports Positive Top-Line Results From P2A LIFT Study of FXR Agonist TERN-101 In Patients With NASH.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.ternspharma.com/news-releases/news-release-details/terns-reports-positive-top-line-results-phase-2a-lift-study-fxr" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">June 14, 2021</small>
                             </div>
                         </div>
                     </div>
@@ -996,6 +1087,32 @@
 
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/sagimet.jpeg" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Sagimet Biosciences Receives Fast Track Designation from U.S. Food and Drug Administration for FASN Inhibitor TVB-2640 in NASH.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.sagimet.com/news-releases/news-release-details/sagimet-biosciences-receives-fast-track-designation-us-food-and" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">March 16, 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/sagimet.jpeg" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">FASN Inhibitor ASC40 Demonstrates Positive Phase 2 Topline Clinical Results from China Cohort of Patients with NASH.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.sagimet.com/news-releases/news-release-details/fasn-inhibitor-asc40-demonstrates-positive-phase-2-topline" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">March 8, 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
                         <img src="images/akero.png" class="img-fluid">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <p class="card-text">Akero Therapeutics Initiates Phase 2B HARMONY Study of Efruxifermin
@@ -1003,6 +1120,19 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <a href="https://ir.akerotx.com/news-releases/news-release-details/akero-therapeutics-initiates-phase-2b-harmony-study-efruxifermin" class="btn btn-primary w-25" target="_blank">Read</a>
                                 <small class="text-body-secondary">February 24, 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/terns.png" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">Terns Announces FDA Clearance Of Investigational New Drug Application For First-In-Human P1 Trial Of TERN-501, Its THR-BETA Agonist In Development For The Treatment Of NASH.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.ternspharma.com/news-releases/news-release-details/terns-announces-fda-clearance-investigational-new-drug-ind" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">January 19, 2021</small>
                             </div>
                         </div>
                     </div>
