Complete revamp page layouts and content completion

--- a/result.html
+++ b/result.html
@@ -24,13 +24,16 @@
             </button>
             <div class="collapse navbar-collapse" id="nav2">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">HOME</a>
+                    </li>
                     <li class="dropdown nav-item">
                         <button class="btn btn-dark dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             HEPION
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li class="nav-item">
-                                <a href="index.html" class="dropdown-item">PRESS RELEASE</a>
+                                <a href="hepion.html" class="dropdown-item">PRESS RELEASE</a>
                             </li>
                             <li class="nav-item">
                                 <a href="about.html" class="dropdown-item">RENCOFILSTAT</a>
@@ -881,8 +884,8 @@
     <!-- CODE DIVISON -->
     <footer class="py-3 mt-5 mb-3">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Hepion</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link px-2 text-body-secondary">CRV431</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Homepage</a></li>
+            <li class="nav-item"><a href="hepion.html" class="nav-link px-2 text-body-secondary">Hepion</a></li>
             <li class="nav-item"><a href="article.html" class="nav-link px-2 text-body-secondary">Article</a></li>
             <li class="nav-item"><a href="landscape.html" class="nav-link px-2 text-body-secondary">Landscape</a></li>
             <li class="nav-item"><a href="result.html" class="nav-link px-2 text-body-secondary">Data</a></li>
