--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <!-- DIVIDER -->
 
     <div class="container my-4">
-        <div class="row gap-4 justify-content-center">
-            <div class="h-100 p-4 bg-warning-subtle text-danger rounded-3 col-lg-5 col-12 shadow">
+        <div class="row gap-4 justify-content-center text-center mx-1">
+            <div class="h-100 p-4 bg-info-subtle rounded-3 col-lg-5 col-12 shadow">
                 <h2>NAFLD</h2>
                 <p>Nonalcoholic Fatty Liver Disease is the build up of extra fat in liver cells that is not caused by alcohol. It is normal for the liver to contain some fat. However, if more than 5%-10% percent of the liver's weight is fat, then it is called a fatty liver (steatosis). The more severe form of NAFLD is called Non-Alcoholic Steatohepatitis (NASH). NASH causes the liver to swell and become damaged.</p>
             </div>
-            <div class="h-100 p-4 bg-warning text-danger rounded-3 col-lg-5 col-12 shadow">
+            <div class="h-100 p-4 bg-info-subtle rounded-3 col-lg-5 col-12 shadow">
                 <h2>NASH</h2>
                 <p>NASH tends to develop in people who are overweight or obese, or have diabetes, high cholesterol or high triglycerides. NASH often has no symptoms and people can have NASH for years before symptoms occur. NASH is one of the leading causes of cirrhosis in adults in the United States, with up to 25% of adults with NASH may have cirrhosis.</p>
             </div>
